--- a/style.css
+++ b/style.css
@@ -139,10 +139,23 @@ body * {
 .track::after {
   content: '';
   height: 6px;
-  width: 80%;
+  width: 0%;
   display: block;
   background: #D9D9D9;
   border-radius: 9.60297px;
+  animation: infinite Music 5s;
+}
+
+@keyframes Music {
+  0% {
+    width: 10%;
+  }
+  50% {
+    width: 50%;
+  }
+  100% {
+    width: 100%;
+  }
 }
 
 .time {
